[package]
name = "ethers-flashbots"
version = "0.10.0"
authors = ["Oliver Nordbjerg <hi@notbjerg.me>"]
license = "MIT"
edition = "2018"
readme = "./README.md"
documentation = "https://docs.rs/ethers-flashbots"
repository = "https://github.com/onbjerg/ethers-flashbots"
homepage = "https://github.com/onbjerg/ethers-flashbots"
description = """
Flashbots middleware for ethers-rs
"""

[dependencies]
# Error handling
thiserror = { version = "1.0.37", default-features = false }

# Serialization/deserialization
serde = "1"
serde_json = "1"
chrono = { version = "0.4.22", features = ["default", "serde"] }

# HTTP
url = { version = "2.3.1", default-features = false }
reqwest = { version = "0.11", default-features = false }

# Async
async-trait = { version = "0.1.58", default-features = false }
futures-util = "0.3"
futures-core = "0.3"
pin-project = "1"

# Ethers
ethers = { version = "1.0.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
ethers = { version = "1.0.0", default-features = false }
eyre = "0.6"

[features]
default = ['openssl']
openssl = ['ethers/openssl', 'reqwest/default-tls']
rustls = ['ethers/rustls', 'reqwest/rustls-tls']
