[package]
authors = ["Oliver Nordbjerg <hi@notbjerg.me>"]
description = """
Flashbots middleware for ethers-rs
"""
documentation = "https://docs.rs/ethers-flashbots"
edition = "2018"
homepage = "https://github.com/onbjerg/ethers-flashbots"
license = "MIT"
name = "ethers-flashbots"
readme = "./README.md"
repository = "https://github.com/onbjerg/ethers-flashbots"
version = "0.13.0"

[dependencies]
# Error handling
thiserror = {version = "1.0.37", default-features = false}

# Serialization/deserialization
chrono = {version = "0.4.22", features = ["default", "serde"]}
serde = "1"
serde_json = "1"

# HTTP
reqwest = {version = "0.11", default-features = false}
url = {version = "2.3.1", default-features = false}

# Async
async-trait = {version = "0.1.58", default-features = false}
futures-core = "0.3"
futures-util = "0.3"
pin-project = "1"

# Ethers
ethers = {version = "2.0.0", default-features = false}

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]
version = "1.3.2"

[dev-dependencies]
ethers = {version = "2.0.0", default-features = false}
eyre = "0.6"
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}

[features]
default = ['openssl']
openssl = ['ethers/openssl', 'reqwest/default-tls']
rustls = ['ethers/rustls', 'reqwest/rustls-tls']
